--- a/appWarmaster/index.html
+++ b/appWarmaster/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vikingo.png" />
+    <link rel="icon" type="image/png+xml" href="/vikingo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gestion de Torneos</title>
   </head>
